--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
 
+
+Python 3.9.23
+GCC 11.2.0
+pandas=2.3.2
+numpy=1.21.6
+matplotlib=3.9.2
+ipywidgets= 8.0.7
+
+
+
 ___________________
 Python 3.13.7
+GCC ?????
 pandas=2.3.3
 numpy=2.1.3
 matplotlib=3.10.6
